<resources>
    <string name="app_name">EquipmentOwner</string>
    <string name="dont_have_an_account_register">Dont Have An Account? Register</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forget_password">Forget_password</string>
    <string name="welcome">WELCOME</string>
    <string name="todo">todo</string>
    <string name="full_name">Full Name</string>
    <string name="dob">DOB</string>
    <string name="full_address">Full Address</string>
    <string name="email">Email</string>
    <string name="phone_no">Phone No.</string>
    <string name="gender">Gender :</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="register">Register</string>
    <string name="already_have_an_account_login">Already Have An Account? Login</string>
    <string name="tractor_company">Tractor Company</string>
    <string name="tractor_no">Tractor No.</string>
    <string name="rent_hour">Rent/hour</string>
    <string name="city_village">City/Village</string>
    <string name="ok">OK</string>
    <string name="tractor_information">Tractor Information</string>
</resources>