<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".LoginActivity"
    android:orientation="vertical"
    android:background="#F8F6F6"
    android:padding="20dp"
    android:gravity="center">




    <TextView
        android:id="@+id/Login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:text="@string/login"
        android:textColor="@color/black"
        android:textSize="50sp"
        android:textStyle="bold"
        android:gravity="center"/>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="415dp"
        android:layout_gravity="center"
        android:scrollIndicators="none"
        android:scrollbarSize="0dp"
        tools:targetApi="m">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">


            <com.google.android.material.textfield.TextInputLayout

                android:id="@+id/Username"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />


            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout

                android:id="@+id/Password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />


            </com.google.android.material.textfield.TextInputLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">


                <Button
                    android:id="@+id/Forget_password"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_gravity="right"
                    android:background="#00000000"
                    android:outlineAmbientShadowColor="@color/black"
                    android:outlineSpotShadowColor="@color/black"
                    android:paddingRight="0dp"
                    android:text="@string/forget_password"
                    android:textColor="@color/black"
                    tools:ignore="RtlHardcoded,RtlSymmetry,UnusedAttribute"
                    />

            </RelativeLayout>



            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="#074C0A"
                android:outlineSpotShadowColor="@color/black"
                android:shadowColor="@color/black"
                android:text="LOGIN"
                android:textColor="#ffffff"
                tools:ignore="HardcodedText"
                tools:targetApi="p" />

            <Button
                android:id="@+id/Dont_have_an_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="6dp"
                android:background="#00000000"
                android:shadowColor="@color/black"
                android:text="@string/dont_have_an_account_register"
                android:textColor="@color/black"

                />


        </LinearLayout>

    </ScrollView>


</LinearLayout>
